[package]
name = "nrf52dk-rs"
categories = ["embedded", "hardware-support", "no-std"]
version = "0.0.1"
authors = ["Niklas Adolfsson <niklasadolfsson1@gmail.com>"]
license = "MIT"
description = "bare-metal on nrf52dk"

[dependencies]
cortex-m = "0.5.2"
tock-regs = { git = "https://github.com/tock/tock.git" }

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
